# clawpack

./: .f2py_f2cmap  .gitignore  .gitmodules  .travis.yml  CITATION.md  CODE_OF_CONDUCT.md  CONDUCT.md  Dockerfile  LICENSE  README.md  README.txt  RunxinNi_JMA  calculate_radius_max_wind  changes.md  meson.build  metadata.py  notes.md  pull_all.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  test.txt  travis-automerge.sh
apps/: README.txt
clawpack/: __init__.py  meson.build  setup.py
conda-recipe/: build.sh  meta.yaml
datafiles/: info_sz.dat.txt
dev/: README.txt
dev/bowl-slosh_fgmax/: Makefile  README.txt  fgmax_processing.py  make_fgmax.py  make_xyB.py  plot_fgmax_grid.py  qinit.f90  setplot.py  setrun.py
dev/bowl-slosh_friction/: README.rst  README.txt  setrun.py
dev/chile2010_fgmax/: Makefile  README.txt  make_fgmax.py  plot_fgmax_grid.py  plot_fgmax_transect.py  setplot.py  setrun.py  usgs100227.cfg
dev_new_dtopo/debug_rectintegral/: Makefile  Makefile_new  README.txt  cellgridintegrate.f  maketopo.py  setplot.py  setrun.py
dev_new_dtopo/dtopo1/: Makefile  maketopo.py  setplot.py  setrun.py
doc/: README.txt  geoclaw.rst  index.rst  quick_tsunami.rst  setrun_geoclaw.rst  setrun_geoclaw_sample.rst  topo.rst
examples/: README.txt  run_tests.py
examples/adjoint/tsunami_Alaska/: README.md  maketopo.py  run_adjoint_flagging.py  setplot.py  setprob.f90  setrun.py
examples/multi-layer/bowl-radial/: Makefile  README.rst  maketopo.py  qinit.f90  qinit_module.f90  setplot.py  setrun.py
examples/multi-layer/chile2010/: Makefile  plot_dart.py  setplot.py  setrun.py
examples/multi-layer/chile2010_ml/: 32412_notide.txt  Makefile  README.rst  _setplot.py  genline.py  junk.py  plotfg.py  setplot.py  setplot_speeds.py  setrun.py
examples/multi-layer/chile_2010/: Makefile  README.rst  makehump.py  qinit.f90  setplot.py  setplot_kml.py  setrun.py
examples/multi-layer/plane_wave/: .gitignore  Makefile  README.rst  qinit.f90  qinit_module.f90  run_tests.py  setplot.py  setrun.py
examples/multi-layer/square_basin/: Makefile  setplot.py  setrun.py  tracy.storm
examples/multi-layer/square_multi/: Makefile  setplot.py  setrun.py
examples/multilayer/: Makefile  make_gauge_plots.py  make_movies.sh  run_tests.py  setrun.py
examples/multilayer/plane_wave/: Makefile  setplot.py  setrun.py
examples/storm-surge/Mangkhut/: plot_num_grids.py  (+2 more)
scratch/: README.txt
src/: README.txt
src/2d/: advanc.f  allowflag.f  allowflag.f90  amr2.f  amr2_fgmax.f90  amr2ez.f  b4step2.f  b4step2.f90  bc2amr.f  bilinearintegral.f  cellgridintegrate.f  dtopo.f90  dtopo_module.f90  dumpgauge.f  fgmax_finalize.f90  fgmax_frompatch.f90  fgmax_interpolate.f90  fgmax_module.f90  fgmax_read.f90  fgmax_values.f90  fgrid.f  fgridinterp.f  fgridinterp.f90  fgridout.f  fgridout.f90  filpatch.f  filpatch_new.f90  filval.f  filval.f90  filval_new.f90  fixedgrids.i  fixedgrids_module.f90  flag2refine.f  flag2refine.f90  flag2refine2.f  flag2refine2.f90  flux2fw.f  gauges.i  gauges_module.f90  geoclaw_mod.f90  (+48 more)
src/2d_adjoint/: Makefile.adjoint_geoclaw  advanc.f  b4step2.f90  coarsen.f  errest.f  errf1.f  flag2refine2.f90  innerprod_module.f90  interp_adjoint.f  interp_adjoint.f90  prepbigstep.f  reload.f  setaux.f90  valout.f
tests/: Makefile  README.txt  __init__.py  dtopo_test.py  kahului_sample_1s.tt2  old_dtopotools.py  old_topotools.py  run_tests.py  test_dtopotools.py  test_etopo1.py  test_storm.py  test_topotools.py  test_units.py  test_util.py  topo_test.py
tests/bowl-slosh/: regression_tests.py  setrun.py
tests/bowl_slosh/: Makefile  make_fgmax_grid.py  maketopo.py  plot_fgmax.py  qinit.f90  regression_data.txt  regression_data_test2.txt  regression_tests.py  setrun.py
tests/chile2010_adjoint/: Makefile  regression_tests.py  setrun.py
tests/data/: SubdividedFaultPlane_test_data.tt3  alaska1964.csv  alaska1964_test_data.tt3  etopo1_10min.asc  sift_test_data.tt3  tohoku_shoreline_1min.npy  tohoku_test_data.tt3  tohoku_ucsb.txt  unstructured_points.txt  unstructured_test_data.tt3
tests/data_storm/: geoclaw.storm  hurdat2.test  jma.test  storm_old.py
tests/dtopo1/: Makefile  dtopo1.csv  dtopo2.csv  dtopo3.tt1  maketopo.py  regression_data.txt  regression_data_test2.txt  regression_tests.py  setplot.py  setrun.py  topo1.topotype2  topo2.topotype2
tests/etopo1/: fetch_etopo.py  test_etopo.py
tests/multilayer/: Makefile  qinit.f90  qinit_module.f90  regression_data.txt  regression_tests.py  setplot.py  setrun.py
tests/multilayer_amr/: Makefile  qinit.f90  qinit_module.f90  regression_tests.py  setplot.py  setrun.py
tests/netcdf_topo/: Makefile  maketopo.py  netcdf_test.f90  regression_tests.py  setplot.py  setrun.py
tests/storm_surge/: Makefile  regression_data.txt  regression_tests.py  setrun.py
tests/test_storm/: hurdat_data.txt  jma_data.txt  test.storm
tsunami/bowl-radial-1/: Makefile  setplot.py  setrun.py
(+411 files in other folders)
